--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#008577</color>
-<color name="colorPrimaryDark">#00574B</color>
-<color name="colorAccent">#D81B60</color>
-
-
-    <?xml version="1.0" encoding="utf-8"?>
-    <resources>
+<color name="colorPrimary">#ffca28</color>
+<color name="colorPrimaryDark">#c79a00</color>
+<color name="colorAccent">#26A69A</color>
 
         <!-- google's material design colours from
         http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
@@ -304,6 +300,6 @@
         <color name="md_blue_grey_700">#455A64</color>
         <color name="md_blue_grey_800">#37474F</color>
         <color name="md_blue_grey_900">#263238</color>
+        <color name="transparent">#00FFFFFF</color>
 
-    </resources>
 </resources>
