--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -301,4 +301,6 @@
         <color name="md_blue_grey_800">#37474F</color>
         <color name="md_blue_grey_900">#263238</color>
 
+        <color name="transparent">#0000FFFF</color>
+
 </resources>
