--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,6 @@
 <color name="colorPrimaryDark">#00574B</color>
 <color name="colorAccent">#D81B60</color>
 
-
-    <?xml version="1.0" encoding="utf-8"?>
-    <resources>
-
         <!-- google's material design colours from
         http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
 
@@ -305,5 +301,6 @@
         <color name="md_blue_grey_800">#37474F</color>
         <color name="md_blue_grey_900">#263238</color>
 
-    </resources>
+        <color name="transparent">#00FFFFFF</color>
+
 </resources>
