--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -13,7 +13,6 @@
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
@@ -23,12 +22,49 @@
             android:fitsSystemWindows="true"
             android:background="@color/md_white_1000"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            
-            <Toolbar
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/md_grey_400"
+                    android:padding="5dp"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+                    android:text="Atender em..."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/address"
+                    android:padding="2dp"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold"
+                    android:text="address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            </Toolbar>
+                <android.support.v7.widget.Toolbar
+                    android:padding="5dp"
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="parallax"
+                    app:popupTheme="@style/AppTheme">
+
+                    <android.support.v7.widget.SearchView
+                        app:queryHint="Pesquise, produtos ou serviços..."
+                        app:queryBackground="@color/transparent"
+                        android:foregroundTint="@android:color/transparent"
+                        android:backgroundTint="@color/md_grey_100"
+                        android:background="@drawable/round"
+                        app:iconifiedByDefault="false"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </android.support.v7.widget.Toolbar>
+
+            </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
