--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#008577</color>
-<color name="colorPrimaryDark">#00574B</color>
-<color name="colorAccent">#D81B60</color>
+<color name="colorPrimary">#FFCA28</color>
+<color name="colorPrimaryDark">#FFB300</color>
+<color name="colorAccent">#83551C</color>
 
         <!-- google's material design colours from
         http://www.google.com/design/spec/style/color.html#color-ui-color-palette -->
