--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".StoreActivity">
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:elevation="4dp"
+        android:id="@+id/appbarlayout"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
@@ -27,21 +24,20 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/md_grey_400"
-                    android:padding="5dp"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                    android:text="Atender em..."
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:src="@drawable/ic_pets" />
                 <TextView
                     android:id="@+id/address"
-                    android:padding="2dp"
+                    android:layout_margin="2dp"
+                    android:padding="5dp"
                     style="@style/TextAppearance.AppCompat.Title"
-                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                     android:textColor="@color/colorAccent"
                     android:textStyle="bold"
-                    android:text="address"
+                    android:layout_gravity="center"
+                    android:text="Nome PetShop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -54,7 +50,7 @@
                     app:popupTheme="@style/AppTheme">
 
                     <android.support.v7.widget.SearchView
-                        app:queryHint="Pesquise, produtos ou serviços..."
+                        app:queryHint="Pesquise, produtos desta loja..."
                         app:queryBackground="@color/transparent"
                         android:foregroundTint="@android:color/transparent"
                         android:backgroundTint="@color/md_grey_100"
@@ -70,57 +66,74 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrool"
+        android:layout_width="match_parent"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:background="@drawable/round"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:textColor="@color/md_black_1000"
+                    android:padding="5dp"
+                    android:text="Destaques"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:padding="10dp"
+                    android:id="@+id/products"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:background="@drawable/round"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:textColor="@color/md_black_1000"
+                    android:padding="5dp"
+                    android:text="Produtos / Serviços"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/services"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="182dp"
-        android:layout_height="109dp"
-        android:layout_above="@+id/lbl_destaques"
-        android:layout_alignEnd="@+id/app_bar"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="-16dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:clickable="true"
         android:backgroundTint="@color/md_yellow_600"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_favorite_border_white_24dp" />
+        android:tint="@color/md_white_1000"
+        app:srcCompat="@drawable/ic_bone"
+        app:borderWidth="0dp"
+        android:layout_marginBottom="@dimen/fab_margin_bottom"
+        android:layout_marginEnd="@dimen/fab_margin_right"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        app:layout_anchor="@id/appbarlayout"
+        android:focusable="true"
+        app:layout_anchorGravity="bottom|right|end"/>
 
-    <TextView
-        android:id="@+id/lbl_destaques"
-        android:layout_below="@id/app_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lbl_destaques"
-        android:textSize="18sp"
-        android:layout_margin="2dp"
-        style="bold"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/lbl_destaques"
-        android:id="@+id/recycler_destaques"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/recycler_destaques_height"
-        android:orientation="horizontal"
-        android:layout_margin="5dp">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <TextView
-        android:id="@+id/lbl_produtos"
-        android:layout_below="@id/recycler_destaques"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lbl_produtos"
-        android:layout_margin="2dp"
-        android:textSize="18sp"
-        style="bold"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/lbl_produtos"
-        android:id="@+id/recycler_produtos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
-
-    </android.support.v7.widget.RecyclerView>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
