--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="recycler_destaques_height">170dp</dimen>
+
+
+    <dimen name="fab_margin_right">5dp</dimen>
+    <dimen name="fab_margin_bottom">1dp</dimen>
+
 </resources>
