icon changed and home fragment layout

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/AppTheme.NoActionBar"
     android:background="@color/colorPrimaryDark"
     tools:context=".Splash">
 
@@ -10,6 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher_foreground" />
+        android:src="@drawable/ic_launcher_foreground" />
 
 </RelativeLayout>
