--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.design.widget.CollapsingToolbarLayout
-            android:elevation="4dp"
+            android:elevation="1dp"
             app:contentScrim="@color/md_white_1000"
             android:background="@color/md_white_1000"
             android:layout_width="match_parent"
@@ -72,6 +72,28 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/round"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="Pet shops"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/shops"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_margin="10dp"
                 android:padding="10dp"
                 android:background="@drawable/round"
@@ -113,27 +135,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:padding="10dp"
-                android:background="@drawable/round"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
-                <TextView
-                    style="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:padding="5dp"
-                    android:text="Pet shops"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/shops"
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
 
 
 
